Added logging using Serilog.

--- a/appsettings.json
+++ b/appsettings.json
@@ -8,11 +8,36 @@
     "ClientId": "e680d879-ee0a-4513-9918-def240e062ce",
     "Scopes": "Company.Read"
   },
-  "Logging": {
-    "LogLevel": {
+  "Serilog": {
+    "Using": [ "Serilog.Sinks.Console", "Serilog.Sinks.File" ],
+    "MinimumLevel": {
       "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
-    }
+      "Override": {
+        "Microsoft": "Warning",
+        "System": "Warning"
+      }
+    },
+    "WriteTo": [
+      {
+        "Name": "Console"
+      },
+      {
+        "Name": "File",
+        "Args": {
+          "path": "Logs/log-.txt",
+          "rollingInterval": "Day",
+          "restrictedToMinumumLevel": "Information",
+          "formatter": "Serilog.Formatting.Json.JsonFormatter"
+        }
+      },
+      {
+        "Name": "Debug",
+        "Args": {
+          "restrictedToMinimumLevel": "Debug"
+        }
+      }
+    ],
+    "Enrich": [ "FromLogContext", "WithMachineName", "WithThreadId" ]
   },
   "AllowedHosts": "*",
   "AppSettings": {
