--- a/first-api-backend.csproj
+++ b/first-api-backend.csproj
@@ -23,6 +23,7 @@
     <PackageReference Include="Microsoft.Identity.Web" Version="3.3.0" />
     <PackageReference Include="Npgsql" Version="8.0.5" />
     <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="8.0.10" />
+    <PackageReference Include="Serilog.AspNetCore" Version="8.0.3" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.6.2" />
   </ItemGroup>
 
